--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ asttokens==2.0.5
 backcall==0.2.0
 black==22.1.0
 click==8.0.4
+coverage==7.3.2
 decorator==5.1.1
 Django==4.0.2
 executing==0.8.2
@@ -29,6 +30,7 @@ Pygments==2.11.2
 pylint==2.12.2
 pylint-django==2.5.2
 pylint-plugin-utils==0.7
+pytest-cov==4.1.0
 six==1.16.0
 sqlparse==0.4.2
 stack-data==0.2.0
