--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=jeffersonnc_ci-cd-project
 sonar.projectName=ci-cd-project
 sonar.projectVersion=1.0
 sonar.sources=.
-sonar.tests=media_organizer/tests.py
+sonar.tests=manage.py
 sonar.sourceEncoding=UTF-8
 sonar.pylint.reportPath=pylint.json
 sonar.python.coverage.reportPaths=coverage.xml
