--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.organization=jeffersonnc
 sonar.projectKey=jeffersonnc_ci-cd-project
 sonar.projectName=ci-cd-project
 sonar.projectVersion=1.0
+sonar.language=python
 sonar.sources=.
-sonar.tests=manage.py
 sonar.sourceEncoding=UTF-8
 sonar.pylint.reportPath=pylint.json
 sonar.python.coverage.reportPaths=coverage.xml
