ci: eliminar synk de codigo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@2.0.0
-  snyk: snyk/snyk@2.0.2
 
 
 
@@ -33,10 +32,8 @@ jobs:
           command: coverage report -m
       - store_artifacts:
           path: coverage.xml
-      - snyk/scan:
-          token-variable: SNYK_TOKEN
 
-  build-and-push-to-dockerhub:
+  build-and-push:
     docker:
       - image: cimg/python:3.10.1
     steps:
@@ -53,7 +50,7 @@ workflows:
     jobs:
       - code-quality:
           context: SonarCloud
-      - build-and-push-to-dockerhub:
+      - build-and-push:
           requires:
             - code-quality
 
