--- a/app/service.yml
+++ b/app/service.yml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app
-  labels:
-    app: app
+  name: myapp-service
 spec:
-  type: NodePort
-  ports:
-  - port: 80
   selector:
-    app: app
+    app: myapp
+  ports:
+  - port: 8080
+    protocol: TCP
+    targetPort: 8080
