Add deploy workflow to CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,13 @@ workflows:
       - build-and-push:
           requires:
             - code-quality
+  deploy:
+    jobs:
+      - build-and-push:
+          filters:
+            branches:
+              only:
+                - main
 
         
 
